--- a/Decision Trees.ipynb
+++ b/Decision Trees.ipynb
@@ -2,11 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'graphviz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m----------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m      Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-852bf8fb4c27>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mgraphviz\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSource\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatasets\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mload_iris\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtree\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mDecisionTreeClassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexport_graphviz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'graphviz'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
+    "from graphviz import Source\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
     "import numpy as np\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -48,6 +63,52 @@
    "metadata": {},
    "source": [
     "# Section: Training And Visualizing A Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following trains a DecisionTreeClassifier on the iris dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iris = load_iris()\n",
+    "X = iris.data[:, :2]\n",
+    "y = iris.target\n",
+    "\n",
+    "tree_clf = DecisionTreeClassifier(max_depth=2, random_state=42)\n",
+    "tree_clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's visualize the trained Decision Tree by using the export_graphviz() method. It outputs a filled called <em>iris_tree.dot</em>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_graphviz(\n",
+    "    tree_clf,\n",
+    "    out_file = os.path.join(IMAGE_PATH, \"iris_tree.dot\"),\n",
+    "    feature_names = iris.feature_names[2:],\n",
+    "    class_names = iris.target_names,\n",
+    "    rounded = True,\n",
+    "    filled = True\n",
+    ")\n",
+    "\n",
+    "Source.from_file(os.path.join(IMAGE_PATH, \"iris_tree.dot\"))"
    ]
   },
   {
