Added section: The CART training algorithm

--- a/Decision Trees.ipynb
+++ b/Decision Trees.ipynb
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Section:Making Predictions"
+    "# Section: Making Predictions"
    ]
   },
   {
@@ -401,11 +401,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Model interpretation: White box versus black box"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Decision Trees are considered <em>white box models</em> because their decisions are easy to interpret. In contrast, Random Forest or Neural Networks are generally considered <em>black box models</em>. They make great predictions, and it's easy to check the calculations that they performed to make predictions. But it's usually hard to explain in simple terms why the predictions were made. I.g, if a NN says that a particular person appears on a picture, it's hard to know what contributed to the prediction: did the model recognize the person's mouth? eyes? nose? etc. Conversely, Decision Trees provide nice, simple classification rules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End Of Section: Making Predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Section: Estimating Class Probabilites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Decision Tree can also estimate the probability that an instances belongs to a particular class $k$. For example, a flower whose petals are 5cm long and 1.5cm wide. The corresponding leaf node is the depth=2 left node, thus the Decision Tree outputs the following probabilites:\n",
+    "<ul>\n",
+    "    <li><strong>0%</strong> for Iris Setosa (0/54)</li>\n",
+    "    <li><strong>90.7%</strong> for Iris Versicolor (49/54)</li>\n",
+    "    <li><strong>9.3%</strong> for Iris Virginica (4/54)</li>\n",
+    "</ul>\n",
+    "And if asked to predict a class, it outputs Iris Versicolor (class 1) because it has the highest probablity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.90740741, 0.09259259]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_clf.predict_proba([[5.0, 1.5]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_clf.predict([[5, 1.5]])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End Of Section: Estimating Class Probabilites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Section: Estimating Class Probabilites"
+   ]
   }
  ],
  "metadata": {
