Added section: Computational complexity

--- a/Decision Trees.ipynb
+++ b/Decision Trees.ipynb
@@ -520,8 +520,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Section: Estimating Class Probabilites"
+    "# Section: The CART Training Algorithm"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scikit Learn uses the <em>Classification and Regressiob Tree</em> (CART) algorithm to train Decision Trees (aka \"growing\" trees). The algorithm works by first splitting the training set into two subsets using a single feature $k$ and a threshold $t_k$ (e.g \"petal length $\\le 2.45$ cm\").<br>\n",
+    "How does it choose $k$ and $t_k$? <br>\n",
+    "It searches for the pair $\\left(k, t_k\\right)$ that produces the purest subsets (weighted by their size) <br>\n",
+    "The equation 6-2 gives the cost function the the algorithm tries to minimize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/Decision tree - CART cost function for classification.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The CART algorithm continues to split the training set recursively. It stops recursing once it reaches the maximum depth (max_depth hyperparameter), or if it can't find a split that will reduce impurity. <br>\n",
+    "Other hyperparameters that control stopping conditions: min_samples_split, min_samples_leaf, min_weight_fraction_leaf and max_leaf_nodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<strong>Note</strong>, the CART algorithm is a <em>greedy algorithm</em>: it greedily searches for an optimum slpit at the top level, then repeats the process at each subsequent level. It doesn't check whether or not the split will lead to the lowest possible impurity several levels down. <br>\n",
+    "A greedy algorithm produces a solution that's considered good but not guranteed to be optimal.\n",
+    "<br>\n",
+    "<br>\n",
+    "Unfortunately, finding the optimal tree is known to be a <strong>NP-Complete problem:</strong> it requires $O(exp(m))$ time, making the problem intractable even for small training sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
