Added section: Gini impurity or entropy?

--- a/Decision Trees.ipynb
+++ b/Decision Trees.ipynb
@@ -560,6 +560,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End Of Section: The CART Training Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Section: Computational Complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Making predictions requires traversing the Decision Tree from the root to a leaf. So, to traverse the whole tree requires going through roughly $O(log_2(m))$ nodes. Prediction complexity is $O(log_2(m))$ since it only requires checking the value of one feature. Thus, predictions are very fast, even when dealing with large training sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training algorithm compares all features (or less if max_features is set) on all samples at each node. Thus, the training complexity is $O(n \\times m log_2(m))$. For small training sets (less than a few thousands), Scikit Learn can speed up the training by presorting the data (set pre_sort=True), but doing so with larger training sets will slow down the training considerably"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End Of Section: Computational Complexity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Section: Gini Impurity Or Entropy?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
