Added section: Regularization hyperparameters

--- a/Decision Trees.ipynb
+++ b/Decision Trees.ipynb
@@ -630,6 +630,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default, the Gini impurity measure is used, but it's possible to select the entropy impurity by setting the hyperparameter criterion=\"entropy\". A set's entropy is zero when it contains instances of only one class. <br>\n",
+    "Equation 6-3 shows the definition of the entropy of the $i^{th}$ node. For example, the depth=2 left node in figure 6-1 has an entropy equal to: $-(49/54)log_2(49/54) - (5/54)log_2(5/54) \\approx 0.445$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/Decision tree - Entropy.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which one to pick? Gini or entropy?<br>\n",
+    "Most of the time it doesn't make a big difference: they lead to similar trees. Gini impurity is slighlty faster to compute, so it's a good default. However, when they differ, Gini impurity tends to isolate the most frequent class in its own branch of the tree, while entropy tends to produce slightly more balanced trees"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End Of Section: Gini Impurity Or Entropy?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Section: Regularization Hyperparameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
